Apply code inspection suggestion: Simplify stream API calls