@@ -23,7 +23,6 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.text.MessageFormat;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static com.google.common.base.Preconditions.checkArgument;
 
@@ -60,7 +59,7 @@ public class Res {
         bundles.addAll(
                 BUNDLE_NAMES.stream()
                         .map(bundleName -> ResourceBundle.getBundle(bundleName, locale))
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 
